# heziMTP

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: Info.plist.in  libusb_config.h
src/: main.mm
src/mtp/: MTPOperations.cpp  MTPOperations.hpp  MTPProtocol.hpp  MTPSession.cpp  MTPSession.hpp
src/transfer/: TransferEngine.cpp  TransferEngine.hpp
src/ui/: App.hpp  App.mm  WebUI.hpp  WebUI.mm
src/ui/webroot/: app.css  app.js  index.html
